--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "basiclightbox": "^5.0.4",
     "modern-normalize": "^1.1.0",
     "tui-pagination": "^3.4.1"
   },
