--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "axios": "^0.27.2",
     "basiclightbox": "^5.0.4",
+    "lodash": "^4.17.21",
     "modern-normalize": "^1.1.0",
+    "notiflix": "^3.2.5",
     "tui-pagination": "^3.4.1"
   },
   "devDependencies": {
